fixed color issue in auth page

--- a/app/index.html
+++ b/app/index.html
@@ -8,7 +8,7 @@
     <title>Sfx</title>
   </head>
   <body>
-    <div id="root" className=""></div>
+    <div id="root" style="background-color: black"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
