refactor: added paychant embed

--- a/app/index.html
+++ b/app/index.html
@@ -9,6 +9,10 @@
   </head>
   <body>
     <div id="root" style="background-color: black"></div>
+    <script
+      src="https://paychant.com/inline/v1"
+      crossorigin="anonymous"
+    ></script>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
