testing with paychant sandbox

--- a/app/index.html
+++ b/app/index.html
@@ -6,13 +6,10 @@
     <link rel="mainfest" href="./public/manifest.json" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sfx</title>
+    <script src="./paychant.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <div id="root" style="background-color: black"></div>
-    <script
-      src="https://paychant.com/inline/v1"
-      crossorigin="anonymous"
-    ></script>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
