--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,7 @@
     <link rel="mainfest" href="./public/manifest.json" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sfx</title>
-    <script src="./paychant.js" crossorigin="anonymous"></script>
+    <script src="/src/utils/paychant.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <div id="root" style="background-color: black"></div>
