white bottom fix

--- a/app/index.html
+++ b/app/index.html
@@ -13,7 +13,7 @@
     ></script>
   </head>
   <body>
-    <div id="root" style="background-color: black"></div>
+    <div id="root" style="height: 100%"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
