added sfx mark, --webkit-fill

--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
     <link rel="mainfest" href="./public/manifest.json" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sfx</title>
@@ -13,7 +13,7 @@
     ></script>
   </head>
   <body>
-    <div id="root" style="height: 100%"></div>
+    <div id="root" style="height: 100%; background-color: black"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
