--- a/app/index.html
+++ b/app/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
+    <!-- <meta charset="UTF-8" /> -->
+    <meta content=”text/html; charset=utf-8″ http-equiv=”Content-Type”>
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <link rel="mainfest" href="./public/manifest.json" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
