--- a/app/index.html
+++ b/app/index.html
@@ -3,10 +3,10 @@
   <head>
     <!-- <meta charset="UTF-8" /> -->
     <meta content=”text/html; charset=utf-8″ http-equiv=”Content-Type”>
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
-    <!-- <link rel="mainfest" href="./public/manifest.json" /> -->
-    <link rel="manifest" href="./manifest.webmanifest.json" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="manifest" href="/site.webmanifest.json" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SFx</title>
     <script
